backend/tests/golden/queries/positive/02_or_in_where/query.sdbl
ВЫБРАТЬ
    Ссылка
ИЗ
    Документ.АвансовыйОтчет
ГДЕ
    Организация = &ОргА ИЛИ Организация = &ОргБ
