backend/tests/golden/queries/negative/05_where_simple_eq/query.sdbl
ВЫБРАТЬ
    Ссылка
ИЗ
    Документ.АвансовыйОтчет
ГДЕ
    Контрагент = &Контрагент
    И Проведен
